--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -31,6 +31,10 @@
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
 
+    <script src="_content/CurrieTechnologies.Razor.SweetAlert2/sweetalert2.all.min.js"></script>
+    <link href="_content/CurrieTechnologies.Razor.SweetAlert2/sweetalert2.min.css" rel="stylesheet" />
+
+
 </head>
 
 <body>
