--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -49,6 +49,10 @@
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+
+    <environment names="Development">
+        <script src="_framework/aspnetcore-browser-refresh.js"></script>
+    </environment>
 </body>
 
 </html>
