--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -31,9 +31,9 @@
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
 
-    <script src="_content/CurrieTechnologies.Razor.SweetAlert2/sweetalert2.all.min.js"></script>
+    <!-- <script src="_content/CurrieTechnologies.Razor.SweetAlert2/sweetalert2.all.min.js"></script>
     <link href="_content/CurrieTechnologies.Razor.SweetAlert2/sweetalert2.min.css" rel="stylesheet" />
-
+    <link href="_content/Blazored.Modal/blazored-modal.css"  rel="stylesheet"> -->
 
 </head>
 
@@ -46,9 +46,12 @@
         <a class="dismiss">🗙</a>
     </div> -->
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/CurrieTechnologies.Razor.SweetAlert2/sweetAlert2.min.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="js/app.js"></script>
+
 
     <environment names="Development">
         <script src="_framework/aspnetcore-browser-refresh.js"></script>
