--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -28,9 +28,11 @@
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <link href="lunchBlazor.Client.styles.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/1.1.2/css/bootstrap-multiselect.css">
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        asp-append-version="true" />
     <!-- <script src="_content/CurrieTechnologies.Razor.SweetAlert2/sweetalert2.all.min.js"></script>
     <link href="_content/CurrieTechnologies.Razor.SweetAlert2/sweetalert2.min.css" rel="stylesheet" />
     <link href="_content/Blazored.Modal/blazored-modal.css"  rel="stylesheet"> -->
@@ -49,8 +51,12 @@
     <script src="_content/CurrieTechnologies.Razor.SweetAlert2/sweetAlert2.min.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/1.1.2/js/bootstrap-multiselect.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous" defer></script>
     <script src="js/app.js"></script>
+    <script src="js/script.js"></script>
 
 
     <environment names="Development">
